2001-12-20  Bruno Haible  <bruno@clisp.org>

	* setenv.c (__add_to_environ): Don't call realloc(NULL,...), use
	malloc instead. For SunOS4.

2001-12-17  Bruno Haible  <bruno@clisp.org>

	* pfnmatch.h: New file, from fileutils-4.1/lib/fnmatch.h with
	modifications.
	* pfnmatch.c: New file, from fileutils-4.1/lib/fnmatch.c with
	modifications.
	* Makefile.am (LIBADD_SOURCE): Add pfnmatch.c.
	(LIBADD_HEADER): Add pfnmatch.h.
	(DISTCLEANFILES): New variable.

2001-12-18  Bruno Haible  <bruno@clisp.org>

	* getline.h: Include <stddef.h>, for size_t.

2001-12-15  Bruno Haible  <bruno@clisp.org>

	* localcharset.c: Add OS/2 support.

2001-12-11  Bruno Haible  <bruno@clisp.org>

	* argmatch.c: Include <stdlib.h>, to declare exit().
	* copy-file.c: Include <sys/stat.h>, for struct stat.
	* gcd.c: Include <stdlib.h>, to declare abort().
	* setenv.c: Declare alloca.
	(compar_fn_t): New typedef.
	(KNOWN_VALUE, STORE_VALUE): Use it.

2001-12-08  Bruno Haible  <bruno@clisp.org>

	* pipe-in.c (create_pipe_in): Don't redirect stdin if prog_stdin
	is NULL.
	* pipe-out.c (create_pipe_out): Don't redirect stdout if prog_stdout
	is NULL.

2001-11-24  Bruno Haible  <bruno@clisp.org>

	* javaexec.h (execute_java_class): New argument 'quiet'.
	* javaexec.c (execute_java_class): Likewise.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* hash.c (lookup_2): Remove function, identical to 'lookup'.
	(init_hash): Remove test for NULL that can never succeed.
	(insert_entry_2): Resize at 75%, not 90%. Call 'lookup' instead of
	'lookup_2'.
	(compute_hashval): Shift by 9 bits, not by 4 bits. This drastically
	improves the quality of the hash function, especially for short
	strings.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* javaexec.sh.in: Use HAVE_JAVA instead of HAVE_JAVA_JVM.
	The problem seen with automake-1.4 is gone with automake-1.5.

2001-11-10  Bruno Haible  <haible@clisp.cons.org>

	* argmatch.h (PARAMS): Also test for __SUNPRO_C, because 64-bit Solaris